Bug 802890 - SVGAnimationElement::UpdateHrefTarget should call ResetWithID rather than ResetToURIFragmentID as animation targets must be in the local document r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D193327